[package]
name = "led-rs"
version = "0.1.0"
authors = ["Will Hart <hart.wl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

[[example]]
name = "parse_empty"
path = "examples/parse_empty.rs"

[[example]]
name = "parse_sample"
path = "examples/parse_sample.rs"