[package]
name = "led-rs"
version = "0.1.0"
description = "A parser for the LEd 2D level editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/will-hart/led-rs"
authors = ["Will Hart <hart.wl@gmail.com>"]
edition = "2018"
keywords = ["gamedev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

[[example]]
name = "parse_empty"
path = "examples/parse_empty.rs"

[[example]]
name = "parse_sample"
path = "examples/parse_sample.rs"

[[example]]
name = "render_helpers"
path = "examples/render_data.rs"

[[example]]
name = "iter_render_helpers"
path = "examples/iter_render_data.rs"